istio-configs/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample
spec:
  hosts:
  - "*"
  gateways:
  - sample-gateway
  http:
  - match: 
    - uri:
        prefix: /canary
    route:
      - destination:
          host: sample
          port:
            number: 8080
          subset: prod
        weight: 80
      - destination:
          host: sample
          port:
            number: 8080
          subset: canary
        weight: 20
  - match:
    - uri:
        prefix: /bg
    route:
      - destination:
          host: sample-green
          port:
            number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample
spec:
  host: sample
  subsets:
  - name: prod
    labels:
      version: prod
  - name: canary
    labels:
      version: canary
